# phonevoiceassistant

assistant/: pyproject.toml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0bc815f28cc6_create_tables.py  e410516d3e7a_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/v1/: auth.py
backend/app/api/v1/endpoints/: Readme.md  appointments.py  auth.py  companies.py  services.py  users.py
backend/app/core/: auth.py  config.py  database.py  logging_config.py  security.py
backend/app/core/database/: Readme.md  database.py
backend/app/crud/: company.py  crud_appointment.py  crud_company.py  crud_company_service.py  crud_user.py  users.py
backend/app/models/: __init__.py  appointment.py  appointment_service.py  base.py  company.py  company_service.py  user.py  users.py
backend/app/schemas/: appointment.py  auth.py  common.py  company.py  company_service.py  user.py  users.py
backend/tests/: conftest.py
mobile-frontend/: app.json  package-lock.json  package.json
web-frontend/: package-lock.json  package.json
